Inclusão de fontes e alteração da tela de login

--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
     }
   </script>
 </head>
-<body class="fundo flex justify-center">
-  <div class="container my-24 flex justify-center">
-    <div class="my-10">
-      <input type="text" name="username" id="username" class="block w-full rounded-md border-0 py-1.5 pl-7 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" placeholder="username">
+<body class="fundo justify-center">    
+    <div class="page">
+      <form class="formLogin">
+        <input type="username" placeholder="username" autofocus="true"/>
+        <input type="password" placeholder="password" autofocus="true"/> 
+        <div class="btn-sign-in justify-center">
+          <span id="sign-in">Sign In</span>
+        </div>
+
+      </form>
     </div>
   </div>
 </body>
