Inclusão da imagem e formatação e checkbox

--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
     }
   </script>
 </head>
-<body class="fundo justify-center">    
+<body>    
     <div class="page">
       <form class="formLogin">
-        <input type="username" placeholder="username" autofocus="true"/>
-        <input type="password" placeholder="password" autofocus="true"/> 
-        <div class="btn-sign-in justify-center">
-          <span id="sign-in">Sign In</span>
-        </div>
-
+        <img src="assets/images/logo.png" class="logo-mindplus object-fill h-50 w-60" alt="Logo MindPlus">
+        <div><input type="username" placeholder="username" autofocus="true"/></div>
+        <div><input type="password" placeholder="password" autofocus="true"/> </div>        
+        <div class="stay-signed flex"><input type="checkbox">mantenha-me logado</div>
+        <div class="btn-sign-in">Sign In</div>
       </form>
     </div>
   </div>
