--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
 <body>    
     <div class="page">
       <form class="formLogin">
-        <img src="assets/images/logo.png" class="logo-mindplus object-fill h-50 w-60" alt="Logo MindPlus">
-        <div><input type="username" placeholder="username" autofocus="true"/></div>
-        <div><input type="password" placeholder="password" autofocus="true"/> </div>        
-        <div class="stay-signed flex"><input type="checkbox">mantenha-me logado</div>
-        <div class="btn-sign-in">Sign In</div>
+        <div class="flex place-content-center">
+          <img src="assets/images/logo.png" class="logo-mindplus" alt="Logo MindPlus">
+        </div>
+        <div><input type="username" placeholder="Usuário" autofocus="true"/></div>
+        <div><input type="password" placeholder="Senha" autofocus="true"/></div>        
+        <div class="keep-logged-in flex place-content-center">
+          <input type="checkbox">Mantenha-me logado
+        </div>
+        <div class="btn-sign-in">Entrar</div>
       </form>
     </div>
   </div>
