--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
         <div class="flex place-content-center">
           <img src="assets/images/logo.png" class="logo-mindplus" alt="Logo MindPlus">
         </div>
-        <div><input type="username" placeholder="Usuário" autofocus="true"/></div>
-        <div><input type="password" placeholder="Senha" autofocus="true"/></div>        
+        <div><input type="email" id="email" placeholder="Usuário" autofocus="true"/></div>
+        <div><input type="password" id="senha" placeholder="Senha" autofocus="true"/></div>        
         <div class="keep-logged-in flex place-content-center">
           <input type="checkbox">Mantenha-me logado
         </div>
-        <div class="btn-sign-in">Entrar</div>
+        <div id="btn-login" onclick="">
+          Entrar
+        </div>
       </form>
     </div>
   </div>
