--- a/index.html
+++ b/index.html
@@ -36,5 +36,7 @@
       </form>
     </div>
   </div>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
