--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div><input type="email" id="email" placeholder="Usuário" autofocus="true"/></div>
         <div><input type="password" id="senha" placeholder="Senha" autofocus="true"/></div>        
-        <div class="keep-logged-in flex place-content-center">
+        <div id="keep-logged-in" class="flex place-content-center">
           <input type="checkbox">Mantenha-me logado
         </div>
         <div id="btn-login" onclick="">
