Adicionado função de pressionar o mantenha-me logado clicando no texto

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div><input type="email" id="email" placeholder="Usuário" autofocus="true"/></div>
         <div><input type="password" id="senha" placeholder="Senha" autofocus="true"/></div>        
         <div id="keep-logged-in" class="flex place-content-center">
-          <input type="checkbox">Mantenha-me logado
+          <input type="checkbox" id="checkbox-keep-logged">Mantenha-me logado
         </div>
         <div id="btn-login" onclick="">
           Entrar
