--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <div class="flex place-content-center">
           <img src="assets/images/logo.png" class="logo-mindplus" alt="Logo MindPlus">
         </div>
-        <div><input type="email" id="email" placeholder="Usuário" autofocus="true"/></div>
-        <div><input type="password" id="senha" placeholder="Senha" autofocus="true"/></div>        
+        <div><input type="email" id="email" placeholder="E-mail" autofocus="true" class="shadow-lg"/></div>
+        <div><input type="password" id="senha" placeholder="Senha" autofocus="true" class="shadow-lg"/></div>
         <div id="keep-logged-in" class="flex place-content-center">
           <input type="checkbox" id="checkbox-keep-logged">Mantenha-me logado
         </div>
-        <div id="btn-login" onclick="">
-          Entrar
+        <div class="btn-blue">
+          <button type="button" id="btn-login">Entrar</button>
         </div>
       </form>
     </div>
