Ajustes da header

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
   <div class="page">
-    <form class="formLogin sm:w-1 md:w-32">
+    <form class="formLogin">
       <div class="flex place-content-center">
         <img src="/assets/images/logo.png" class="logo-mindplus" alt="Logo MindPlus">
       </div>
@@ -33,8 +33,8 @@
         <input type="checkbox" id="checkbox-keep-logged">Mantenha-me logado
       </div>
       <a href="src/pages/homepage.html">
-        <div class="btn-blue">
-          <button type="button" id="btn-login">Entrar</button>
+        <div class="btn-blue flex">
+          <button type="button">Entrar</button>
         </div>
       </a>
     </form>
