--- a/src/pages/homepage.html
+++ b/src/pages/homepage.html
@@ -8,30 +8,21 @@
   <link rel="stylesheet" href="../../style.css">
   <link rel="stylesheet" href="./homepage.css">
   <link rel="stylesheet" href="../../reset.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
 </head>
 
 <body>
   <header class="my-header">
-    <div class="header-logo">
+    <div class="logo">
       <img src="../../assets/images/logo-sem-escrita.png" alt="Logo" />
-      <h6 class="logo-text">MindPlus</h6>
     </div>
-    <div class="header-items">
-      <div class="header-button" onclick="">
-        <img class="icon" src="../../assets/images/building-regular.svg" alt="Building">
-        <p>Minha Empresa</p>
-      </div>
-      <div class="header-button">
-        <img class="icon" src="../../assets/images/list-check-solid (1).svg" alt="Avaliações">
-        <p>Avaliações</p>
-      </div>
-      <div class="header-button consulta-button">
-        <img class="icon" src="../../assets/images/calendar-days-solid.svg" alt="Consultas">
-        <p>Consultas</p>
-      </div>
-      <div class="header-user-button">
-        <img class="user-icon" src="../../assets/images/circle-user-regular.svg" alt="Usuario">
-      </div>
+    <ul class="header-items flex justify-around">
+      <li><img src="../../assets/images/building-regular.svg" alt="Building">Minha Empresa</li>
+      <li><img src="../../assets/images/list-check-solid (1).svg" alt="Avaliações">Avaliações</li>
+      <li><img src="../../assets/images/calendar-days-solid.svg" alt="Consultas">Consultas</li>
+    </ul>
+    <div class="user-icon">
+      <img src="../../assets/images/circle-user-regular.svg" alt="Usuario">
     </div>
   </header>
 </body>
