--- a/events.html
+++ b/events.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,21 +20,26 @@
     }
   </script>
 </head>
-<body>    
+
+<body>
   <header class="my-header py-4">
     <div class="container mx-auto flex items-center justify-between">
       <!-- Logo -->
-        <div class="flex items-center">
-            <img src="logo.png" alt="" class="h-8">
-        </div>
-  
+      <div class="flex items-center">
+        <img src="logo.png" alt="" class="h-8">
+      </div>
+
       <!-- Botões -->
-        <nav class="flex justify-center">
-            <a href="#" class="btn-menu">Empresa</a>
-            <a href="#" class="btn-menu">Colaboradores</a>
-            <a href="#" class="btn-menu">Eventos</a>
-        </nav>
+      <nav class="flex justify-center">
+        <a href="business.html" class="btn-menu">Empresa</a>
+        <a href="employees.html" class="btn-menu">Colaboradores</a>
+        <div id="evn-btn">
+          <a href="events.html" class="btn-menu">Eventos</a>
+        </div>
+
+      </nav>
     </div>
-</header>
+  </header>
 </body>
+
 </html>
