--- a/events.html
+++ b/events.html
@@ -26,7 +26,7 @@
     <div class="container mx-auto flex items-center justify-between">
       <!-- Logo -->
       <div class="flex items-center">
-        <img src="logo.png" alt="" class="h-8">
+        <img src="/assets/images/logo.png" alt="" class="h-8">
       </div>
 
       <!-- Botões -->
