Ajustado responsividade da header.

--- a/src/pages/homepage.html
+++ b/src/pages/homepage.html
@@ -16,6 +16,7 @@
     <div class="logo">
       <img src="../../assets/images/logo-sem-escrita.png" alt="Logo" />
     </div>
+    <div id="open-modal" class="menu-list justify-items-end">|||</div>
     <ul class="header-items flex justify-around">
       <li><img src="../../assets/images/building-regular.svg" alt="Building">Minha Empresa</li>
       <li><img src="../../assets/images/list-check-solid (1).svg" alt="Avaliações">Avaliações</li>
