ideia pronta, falta refinar (depois se tiver tempo)

--- a/admin.html
+++ b/admin.html
@@ -25,7 +25,7 @@
         <div class="container mx-auto flex items-center justify-between">
           <!-- Logo -->
           <div class="flex items-center">
-            <button><img src="logo.png" alt=""></button>
+            <button><img src="/assets/images/logo.png" alt=""></button>
           </div>
       
           <!-- Botões -->
