--- a/events.html
+++ b/events.html
@@ -22,11 +22,11 @@
 </head>
 
 <body>
-  <header class="my-header py-4">
+  <header class="adm-header py-4">
     <div class="container mx-auto flex items-center justify-between">
       <!-- Logo -->
       <div class="flex items-center">
-        <img src="/assets/images/logo.png" alt="" class="h-8">
+        <button><img src="/assets/images/logo.png" alt="" class="h-8"></button>
       </div>
 
       <!-- Botões -->
