--- a/homepage/index.html
+++ b/homepage/index.html
@@ -24,27 +24,27 @@
 
     <header class="my-header">
         <div class="header-logo">
-          <img src="../../assets/images/logo-sem-escrita.png" alt="Logo" />
-          <h6 class="logo-text">MindPlus</h6>
+            <img src="../../assets/images/logo-sem-escrita.png" alt="Logo" />
+            <h6 class="logo-text">MindPlus</h6>
         </div>
         <div class="header-items">
-          <div class="header-button" onclick="">
-            <img class="icon" src="../../assets/images/building-regular.svg" alt="Building">
-            <p>Minha Empresa</p>
-          </div>
-          <div class="header-button">
-            <img class="icon" src="../../assets/images/list-check-solid (1).svg" alt="Avaliações">
-            <p>Avaliações</p>
-          </div>
-          <div class="header-button consulta-button">
-            <img class="icon" src="../../assets/images/calendar-days-solid.svg" alt="Consultas">
-            <p>Consultas</p>
-          </div>
-          <div class="header-user-button">
-            <img class="user-icon" src="../../assets/images/circle-user-regular.svg" alt="Usuario">
-          </div>
+            <div class="header-button" onclick="">
+                <img class="icon" src="../../assets/images/building-regular.svg" alt="Building">
+                <p>Minha Empresa</p>
+            </div>
+            <div class="header-button">
+                <img class="icon" src="../../assets/images/list-check-solid (1).svg" alt="Avaliações">
+                <p>Avaliações</p>
+            </div>
+            <div class="header-button consulta-button">
+                <img class="icon" src="../../assets/images/calendar-days-solid.svg" alt="Consultas">
+                <p>Consultas</p>
+            </div>
+            <div class="header-user-button">
+                <img class="user-icon" src="../../assets/images/circle-user-regular.svg" alt="Usuario">
+            </div>
         </div>
-      </header>
+    </header>
 
     <div class="frase">
         <div class="quadrado font-bold shadow-2xl">
@@ -139,32 +139,50 @@
             <ul class="lista1">
                 <h2 class=" text-xl text-left pl-20 p-3">Inscreva-se já em alguma de nossas atividades:</h2>
                 <li
-                    class="flex-col text-xl text-left text-blue-800 cursor-pointer pl-20 p-4 border-solid border-2 mt-2">
+                    class="cards3 text-xl text-left text-slate-50 cursor-pointer pl-20 p-4 border-solid border-2 mt-2 bg-blue-800 hover:opacity-50">
                     <a href="GymPass.html">GymPass</a>
                 </li>
                 <li
-                    class="flex-col text-xl text-left text-blue-800 cursor-pointer pl-20 p-4 border-solid border-2 mt-2">
+                    class="cards3 text-xl text-left text-slate-50 cursor-pointer pl-20 p-4 border-solid border-2 mt-2 bg-blue-800 hover:opacity-50">
                     <a href="GymPass.html">Mindfulness</a>
                 </li>
                 <li
-                    class="flex-col text-xl text-left text-blue-800 cursor-pointer pl-20 p-4 border-solid border-2 mt-2">
+                    class="cards3 text-xl text-left text-slate-50 cursor-pointer pl-20 p-4 border-solid border-2 mt-2 bg-blue-800 hover:opacity-50">
                     <a href="GymPass.html">Yoga</a>
                 </li>
                 <li
-                    class="flex-col text-xl text-left text-blue-800 cursor-pointer pl-20 p-4 border-solid border-2 mt-2">
+                    class="cards3 text-xl text-left text-slate-50 cursor-pointer pl-20 p-4 border-solid border-2 mt-2 bg-blue-800 hover:opacity-50">
                     <a href="GymPass.html">Meditação</a>
                 </li>
             </ul>
 
         </div>
-
     </div>
-
+    <br>
+    <br>
     <br>
     <hr>
     </div>
 
-    
+    <div class="banner4">
+
+        <img src="img/7.png" alt="" class="flex">
+
+        <div class="flex">
+            <h1 class="text-blue-800 mt-10 text-2xl underline">Depoimentos:</h1>
+        </div>
+    </div>
+
+    <div class="cards4">
+
+
+
+
+    </div>
+
+
+
+
 
 
 
