Adição da barra de menu lateral

--- a/src/pages/homepage.html
+++ b/src/pages/homepage.html
@@ -25,7 +25,16 @@
     <div class="user-icon">
       <img src="../../assets/images/circle-user-regular.svg" alt="Usuario">
     </div>
+    <div id="menu-lateral">
+      <ul>
+        <li><a href="minha-empresa.html">Minha Empresa</a></li>
+        <li><a href="avaliacoes.html">Avaliações</a></li>
+        <li><a href="consultas.html">Consultas</a></li>
+      </ul>
+    </div>
   </header>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="homepage.js"></script>
 </body>
 
 </html>
