meus colaboradores pronto

--- a/2.1-employees.html
+++ b/2.1-employees.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Empresa</title>
+  <title>Colaboradores</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="reset.css">
   <script src="https://kit.fontawesome.com/f9c6abbc59.js" crossorigin="anonymous"></script>
@@ -53,27 +53,40 @@
   <!-- Cards -->
 
   <div class="cards">
+
     <div class="card">
       <h3>ESTATÍSTICAS</h3>
       <i class="fa-solid fa-chart-pie" :></i>
       <div class="description">
         <p>Informações estatísticas detalhadas.</p>
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-4 px-4 rounded mt-10">
+          Ver Gráficos
+        </button>
+        
+          
+
+        </div>
       </div>
-    </div>
+
     <div class="card">
       <h3>METAS</h3>
-
       <i class="fa-solid fa-bullseye"></i>
       <div class="description">
         <p>Metas a serem alcançadas.</p>
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-4 px-4 rounded mt-10">
+          Ver Metas
+        </button>
       </div>
     </div>
+
     <div class="card">
       <h3>MEUS COLABORADORES</h3>
       <i class="fa-solid fa-users-gear"></i>
       <div class="description">
         <p>Informações sobre os colaboradores da equipe.</p>
-      </div>
+        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-4 px-4 rounded mt-10">
+          Editar Colaboradores
+        </button>
     </div>
   </div>
 
