Alterações no menu lateral responsivo

--- a/src/pages/homepage.html
+++ b/src/pages/homepage.html
@@ -26,11 +26,14 @@
       <img src="../../assets/images/circle-user-regular.svg" alt="Usuario">
     </div>
     <div id="menu-lateral">
-      <ul>
+      <ul class="menu-lateral-options">
         <li><a href="minha-empresa.html">Minha Empresa</a></li>
         <li><a href="avaliacoes.html">Avaliações</a></li>
         <li><a href="consultas.html">Consultas</a></li>
       </ul>
+      <div id="close-menu-lateral">
+        <p class="btn-close-menu-lateral"><<</p>
+      </div>
     </div>
   </header>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
