--- a/src/pages/homepage.html
+++ b/src/pages/homepage.html
@@ -16,7 +16,7 @@
     <div class="logo">
       <img src="../../assets/images/logo-sem-escrita.png" alt="Logo" />
     </div>
-    <div id="open-modal" class="menu-list justify-items-end">|||</div>
+    <div id="open-menu-lateral" class="menu-list justify-items-end">|||</div>
     <ul class="header-items flex justify-around">
       <li><img src="../../assets/images/building-regular.svg" alt="Building">Minha Empresa</li>
       <li><img src="../../assets/images/list-check-solid (1).svg" alt="Avaliações">Avaliações</li>
@@ -32,7 +32,7 @@
         <li><a href="consultas.html">Consultas</a></li>
       </ul>
       <div id="close-menu-lateral">
-        <p class="btn-close-menu-lateral"><<</p>
+        <p id="btn-close-menu-lateral"><<</p>
       </div>
     </div>
   </header>
