--- a/2.2-goals.html
+++ b/2.2-goals.html
@@ -11,7 +11,8 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
         google.charts.load('current', { 'packages': ['bar'] });
-        google.charts.setOnLoadCallback(drawChart);</script>
+        google.charts.setOnLoadCallback(drawChart);
+        google.charts.setOnLoadCallback(drawChart2);</script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
     <script src="https://kit.fontawesome.com/f9c6abbc59.js" crossorigin="anonymous"></script>
@@ -73,26 +74,24 @@
         </div>
 
         <div class="goal-3 text-xl w-[80%] h-12 ml-[18%] pr-4 pt-2 border-solid border-2 border-[#276bc4cc] text-right">
-            Faltam <b>100</b> colaboradores para atingir a sua meta.</div>
+            Faltam <b>100</b> colaboradores para atingir a sua meta mensal</div>
         <!-- Talvez fazer tipo 3/4 de preenchimento é a meta (verde). 1/4 de preenchimento fica vermelho. O meio termo fica amarelo. -->
     </div>
 
-    <div class=" bg-[#6FAFC3] mt-8 py-3 px-10 ">
-        <div class="text-2xl font-bold text-black"> Preenchimentos por Ano</div>
-    </div>
-    <div class="bg-[#c2eff1] mb-[2.5%] pt-[5%] flex flex-row justify-center items-center">
-        <div id="columnchart_material" style="width: 800px; height: 500px;"></div>
-    </div>
-
-    <div class=" bg-[#6FAFC3] mt-8 py-3 px-10 ">
+    <div class=" bg-[#6FAFC3] py-3 px-10 ">
         <div class="text-2xl font-bold text-black"> Preenchimentos por Mês</div>
     </div>
-    <!-- <div id="columnchart_material" style="width: 800px; height: 500px;"></div> -->
-
-    <div class=" bg-[#6FAFC3] mt-8 py-3 px-10">
-        <div class="text-2xl font-bold text-black"> Preenchimento por Ano/Mês</div>
+    <div class="bg-[#c2eff1] pb-[5%] pt-[5%] flex flex-row justify-center items-center">
+        <div id="columnchart_material1" style="width: 800px; height: 500px;"></div> <!-- Gráfico 1 -->
     </div>
-    <!-- <div id="columnchart_material" style="width: 800px; height: 500px;"></div> -->
+
+    <div class="bg-[#6FAFC3] py-3 px-10 ">
+        <div class="text-2xl font-bold text-black"> Preenchimentos por Ano</div>
+    </div>
+    <div class="bg-[#c2eff1] pb-[5%] pt-[5%] flex flex-row justify-center items-center">
+        <div id="columnchart_material2" style="width: 800px; height: 500px;"></div> <!-- Gráfico 2 -->
+    </div>
+    
 
 </body>
 
