--- a/src/homepage.html
+++ b/src/homepage.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="homepage.css">
-  <link rel="stylesheet" href="reset.css">  
+  <link rel="stylesheet" href="reset.css">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -20,6 +21,7 @@
     }
   </script>
 </head>
+
 <body>
   <header class="my-header">
     <div class="logo">
@@ -41,10 +43,12 @@
         <li><a href="consultas.html">Consultas</a></li>
       </ul>
       <div id="close-menu-lateral">
-        <p id="btn-close-menu-lateral"><<<</p>
+        <p id="btn-close-menu-lateral">
+          <<<< /p>
       </div>
     </div>
   </header>
+
   <div class="frase">
     <div class="quadrado font-bold shadow-2xl">
       <img src="https://www.rpinfo.com.br/views/geral/img/aspas.png" alt="sky">
@@ -54,7 +58,7 @@
     </div>
   </div>
   <div class="container mx-auto">
-    <h1 class="title1 text-4xl text-center text-blue-800 underline underline-offset-8 p-10 font-mono font-bold">
+        <h1 class="title1 text-4xl text-center text-blue-800 underline underline-offset-8 p-10 font-mono font-bold">
       Recursos</h1>
     <div class="grid grid-cols-1 mx-10 sm:grid-cols-2 mx-5 md:grid-cols-3 mx-5 lg:grid-cols-4 mx-5 gap-4">
       <div class="card p-2 flex flex-col items-center border-solid border-2 shadow-lg ">
@@ -102,50 +106,8 @@
       </div>
     </div>
   </div>
-  <br><br><br>
-  <hr>
-  <div class="abc">
-    <h1 class="text-blue-800 text-7xl mt-2 font-bold font-mono text-center p-10 ">Como está se sentindo?</h1>
-    <div class="flex-col text-xl text-left pl-20 ">
-      Nossa empresa traz programas de bem-estar que incluem atividades físicas, mindfulness, yoga e outras
-      práticas que promovem o equilíbrio emocional.
-    </div>
-    <div>
-      <ul class="lista1">
-        <h2 class=" text-xl text-left pl-20 p-3">Inscreva-se já em alguma de nossas atividades:</h2>
-        <li
-          class="cards3 text-xl text-left text-slate-50 cursor-pointer pl-20 p-4 border-solid border-2 mt-2 bg-blue-800 hover:opacity-50">
-          <a href="gympass.html">GymPass</a>
-        </li>
-        <li
-          class="cards3 text-xl text-left text-slate-50 cursor-pointer pl-20 p-4 border-solid border-2 mt-2 bg-blue-800 hover:opacity-50">
-          <a href="mind-fulness.html">Mindfulness</a>
-        </li>
-        <li
-          class="cards3 text-xl text-left text-slate-50 cursor-pointer pl-20 p-4 border-solid border-2 mt-2 bg-blue-800 hover:opacity-50">
-          <a href="yoga.html">Yoga</a>
-        </li>
-        <li
-          class="cards3 text-xl text-left text-slate-50 cursor-pointer pl-20 p-4 border-solid border-2 mt-2 bg-blue-800 hover:opacity-50">
-          <a href="meditacao.html">Meditação</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <br>
-  <br>
-  <br>
-  <br>
-  </div>
-  <div class="banner4">
-    <img src="../assets/images/7.png" alt="" class="flex">
-    <div class="flex">
-      <h1 class="text-blue-800 mt-10 text-2xl underline">Depoimentos:</h1>
-    </div>
-  </div>
-  <div class="cards4">
-  </div>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="homepage.js"></script>
 </body>
+
 </html>
