página estatisticas + select

--- a/2-employees.html
+++ b/2-employees.html
@@ -62,12 +62,10 @@
         <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-4 px-4 rounded mt-10">
           Ver Gráficos
         </button>
-        
-          
-
         </div>
       </div>
 
+  <!-- >>>Falta linkar botões com páginas - fazer com JS -->
     <div class="card">
       <h3>METAS</h3>
       <i class="fa-solid fa-bullseye"></i>
