fazendo modal do select

--- a/2.2-goals.html
+++ b/2.2-goals.html
@@ -58,7 +58,7 @@
         <div class="text-2xl font-bold text-black"> Metas de Adesão</div>
     </div>
 
-    <div class="goal-1-b px-[5%] pt-2 pb-4 mb-[2.5%]">
+    <div class="goal-1-b px-[5%] pt-2 pb-4">
         <div
             class="goal-1 text-2xl w-[15%] h-32 float-left pl-4 pt-4 ml-[4%] mt-[-0.3%] border-solid border-2 rounded-xl border-white">
             10 <br><b>NOVEMBRO</b><br> 2023</div>
