--- a/2.1-chart.html
+++ b/2.1-chart.html
@@ -1,10 +1,9 @@
 <!doctype html>
 <html>
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meus Colaboradores</title>
+  <title>Estatísticas</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="reset.css">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
@@ -19,23 +18,26 @@
             clifford: '#da373d',
            
           }
-          
         }
       }
     }
   </script>
-
 </head>
 
 <body>
   <header class="adm-header py-3">
     <div class="container mx-auto flex items-center justify-between">
+
+
       <!-- Logo -->
+
       <div class="flex items-center">
-        <button><img src="assets/images/logo.png" alt=""></button>
+        <button><img src="assets/images/logo.png" alt=""></button>  <!-- A linkar com a página inicial, se existir -->
       </div>
 
+
       <!-- Botões Header -->
+
       <nav class="flex justify-center">
         <a href="business.html" class="btn-menu">Empresa</a>
         <div id="emp-btn">
@@ -45,72 +47,47 @@
       </nav>
       <button><i class="fa-solid fa-circle-user fa-3x" style="color: #ffffff;"></i></button>
     </div>
-
   </header>
+
 
   <!-- Introdução -->
 
   <div class="intro mt-5 py-3 px-10">
-    <div class="text-2xl font-semibold text-black">Editar informações sobre os <b>Colaboradores</b></div>
+    <div class="text-2xl font-bold text-black">Estatísticas</div>
+    <div class="text- font-semibold text-black">Selecione a visualização de dados desejada</b></div>
   </div>
 
 
+  <!-- Select dos Gráficos -->
 
-    <!-- Adicionar Colaborador -->
+  <label for="forms-adm" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Formulários dos Colaboradores</label>
+  <select id="forms-adm" onchange="showGraph()" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+    <option selected>Escolha um Formulário</option>
+    <option value="FT">Formulário de Satisfação no Trabalho</option>
+    <option value="FP">Formulário de Satisfação Pessoal</option>
+    <option value="FE">Formulário de Identificação de Fatores de Estresse</option>
+    <option value="FA">Formulário de Autocuidado</option>
+  </select>
 
-    <button class="my-emp-btn shadow-xl bg-blue-500 hover:bg-blue-700 text-white font-bold rounded edit-button"
-      onclick="openModal()">ADICIONAR Colaborador
-    </button>
+  <label for="select-adm" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Gráficos e outras informações</label>
+  <select id="select-adm" onchange="showGraph()" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" data-toggle="modal">
+    <option selected>Escolha um Gráfico</option>
+    <option value="SG">Satisfação Geral dos Colaboradores</option>
+    <option value="DF">Distribuição de Respostas por Formulário</option>
+    <option value="DS">Distribuição de Respostas por Setor</option>
+    <option value="NE">Níveis de Estresse</option>
+    <option value="TT">Tendências Temporais</option>
+    <option value="VPP">Equilíbrio de Vida Pessoal/Profissional</option>
+    <option value="CR">Correlações</option>
+    <option value="FD">Feedback</option> <!-- Qualitativo. Será distribuido visto aleatóriamente, sem identificação -->
+  </select>
 
-    <div class="modal-overlay" onclick="closeModal()"></div>
-    <div class="modal" id="modal">
+  <!-- Modal -->
+  <div class="modal-overlay" onclick="closeModal()"></div>
+  <div class="modal" id="modal">
 
-      <h2>Adicionar Colaborador do Mind+</h2>
-      <p>[FORM Adição de Colaboradores]</p>
-    </div>
-
-
-    <!-- Alterar Colaborador -->
-
-    <button class="my-emp-btn shadow-xl bg-blue-500 hover:bg-blue-700 text-white font-bold rounded edit-button"
-      onclick="openModal()">ALTERAR Colaborador
-    </button>
-
-    <div class="modal-overlay" onclick="closeModal()"></div>
-    <div class="modal" id="modal">
-
-      <h2>Editar Colaborador do Mind+</h2>
-      <p>[FORM Edição de Colaboradores]</p>
-    </div>
-
-
-    <!-- Remover Colaborador -->
-
-    <button class="my-emp-btn shadow-xl bg-blue-500 hover:bg-blue-700 text-white font-bold rounded edit-button"
-      onclick="openModal()">REMOVER Colaborador
-    </button>
-
-    <div class="modal-overlay" onclick="closeModal()"></div>
-    <div class="modal" id="modal">
-
-      <h2>Remover Colaborador do Mind+</h2>
-      <p>[FORM Remoção de Colaboradores]</p>
-    </div>
-
-
-    <!-- Visualizar Colaboradores -->
-
-    <button class="my-emp-btn shadow-xl bg-blue-500 hover:bg-blue-700 text-white font-bold rounded edit-button"
-      onclick="openModal()">VER Colaboradores
-    </button>
-
-    <div class="modal-overlay" onclick="closeModal()"></div>
-    <div class="modal" id="modal">
-
-      <h2>Visualizar Colaboradores cadastrados no Mind+</h2>
-      <p>[FORM Visualização de Colaboradores]</p>
-    </div>
+  </div>
+  
 
 </body>
-
 </html>
