--- a/src/homepage.html
+++ b/src/homepage.html
@@ -62,47 +62,47 @@
       Recursos</h1>
     <div class="grid grid-cols-1 mx-10 sm:grid-cols-2 mx-5 md:grid-cols-3 mx-5 lg:grid-cols-4 mx-5 gap-4">
       <div class="card p-2 flex flex-col items-center border-solid border-2 shadow-lg ">
-        <img src="../assets/images/2.png" alt="" class="image12 h-60">
+        <img src="../assets/images/2.png" alt="" class="imagem-card image12 h-60">
         <h1
           class="title1 text-blue-800 text-2xl mt-2 font-bold font-mono underline underline-offset-8 text-center cursor-pointer">
-          Conscientização e Educação</h1>
-        <div class="mt-4 p-4 text-center">Treinamentos regulares para gestores e colaboradores sobre sinais de
+          Conscientização</h1>
+        <div class=" text-card mt-4 p-4 text-center">Treinamentos regulares para gestores e colaboradores sobre sinais de
           estresse, ansiedade e depressão, bem como estratégias para lidar com essas questões.</div>
         <input type="button" value="Treinamentos"
-          class=" mt-2 w-64 bg-blue-800 hover:bg-gradient-to-r from-cyan-500 to-blue-500 text-slate-50 border-4 border-blue-800 rounded-md text-md cursor-pointer font-bold hover:underline">
+          class="button-card bg-blue-800  from-cyan-500 to-blue-500 text-slate-50 border-4 border-blue-800 rounded-md text-md cursor-pointer font-bold">
       </div>
       <div class="card p-2 flex flex-col items-center border-solid border-2 shadow-lg ">
-        <img src="../assets/images/3.png" alt="" class="image12 h-60">
+        <img src="../assets/images/3.png" alt="" class="imagem-card image12 h-60">
         <h1
           class="title1 text-blue-800 text-2xl mt-2 font-bold font-mono underline underline-offset-8 text-center cursor-pointer">
           Acesso a recursos</h1>
-        <div class="mt-2 p-4 text-center">Possuímos recursos internos e externos para suporte à saúde mental,
+        <div class="text-card mt-2 p-4 text-center">Possuímos recursos internos e externos para suporte à saúde mental,
           como linhas diretas de ajuda, profissionais de saúde mental e aplicativos.
           Além de uma lista de leituras, vídeos e recursos online que promovem a saúde mental.</div>
         <input type="button" value="Experimente aqui"
-          class=" mt-2 w-64 bg-blue-800 hover:bg-gradient-to-r from-cyan-500 to-blue-500 text-slate-50 border-4 border-blue-800 rounded-md text-md cursor-pointer font-bold hover:underline">
+          class="button-card bg-blue-800 from-cyan-500 to-blue-500 text-slate-50 border-4 border-blue-800 rounded-md text-md cursor-pointer font-bold">
       </div>
       <div class="card p-2 flex flex-col items-center border-solid border-2 shadow-lg ">
-        <img src="../assets/images/4.png" alt="" class="image12 h-60">
+        <img src="../assets/images/4.png" alt="" class="imagem-card image12 h-60">
         <h1
           class="title1 text-blue-800 text-2xl mt-2 font-bold font-mono underline underline-offset-8 text-center cursor-pointer">
           Avaliações Regulares</h1>
-        <div class="mt-2 p-4 text-center">Implementamos avaliações regulares da saúde mental para entender as
+        <div class="text-card mt-2 p-4 text-center">Implementamos avaliações regulares da saúde mental para entender as
           necessidades específicas de nossos colaboradores. Utilizamos pesquisas anônimas para avaliar o nível
           de estresse, satisfação e bem-estar no trabalho.</div>
         <input type="button" value="Avalie também!"
-          class=" mt-2 w-64 bg-blue-800 hover:bg-gradient-to-r from-cyan-500 to-blue-500 text-slate-50 border-4 border-blue-800 rounded-md text-md cursor-pointer font-bold hover:underline">
+          class="button-card bg-blue-800 from-cyan-500 to-blue-500 text-slate-50 border-4 border-blue-800 rounded-md text-md cursor-pointer font-bold">
       </div>
       <div class="card p-2 flex flex-col items-center border-solid border-2 shadow-lg ">
-        <img src="../assets/images/1.png" alt="" class="image12 h-60">
+        <img src="../assets/images/1.png" alt="" class="imagem-card image12 h-60">
         <h1
           class="title1 text-blue-800 text-2xl mt-2 font-bold font-mono underline underline-offset-8 text-center cursor-pointer">
           Cultura de Apoio</h1>
-        <div class="mt-4 p-4 text-center">Valorizamos o equilíbrio entre trabalho e vida pessoal.Encorajamos uma
+        <div class="text-card mt-4 p-4 text-center">Valorizamos o equilíbrio entre trabalho e vida pessoal.Encorajamos uma
           atmosfera de abertura e suporte, onde os colaboradores se sintam à vontade para compartilhar suas
           preocupações.</div>
         <input type="button" value="Opine"
-          class=" mt-2 w-64 bg-blue-800 hover:bg-gradient-to-r from-cyan-500 to-blue-500 text-slate-50 border-4 border-blue-800 rounded-md text-md cursor-pointer font-bold hover:underline">
+          class="button-card bg-blue-800 from-cyan-500 to-blue-500 text-slate-50 border-4 border-blue-800 rounded-md text-md cursor-pointer font-bold">
       </div>
     </div>
   </div>
